aggiunto fixed alla barra upgrade e overflow al content main

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@ body {
     float: right;
     display: flex;
     justify-content: flex-end;
+    position: fixed;
+    opacity: 60%;
 }
 
 .btn_upgrade {
@@ -57,6 +59,7 @@ body {
     height: 100%;
     background-color: #141922;
     float: right;
+    overflow: auto;
 
 }
 
